<?xml version="1.0" encoding="utf-8"?>

<!--- Se crea el Absolutelayout que es para que los widgets que estén dentro de este -->
<!---  contenedor basarán su posición en relación con los otros elementos. -->
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Fondo">

    <!--- Se crea el Linearlayout que es para que los widgets que estén dentro de este -->
    <!---  contenedor basarán su posición en relación con los otros elementos. -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="314dp"
    android:layout_x="0dp"
    android:layout_y="1dp"
    android:orientation="vertical">

        <!--- Se crea un textView que se iniciara en 0 -->
        <!--- Los TextView son propiedades de texto que nos van a permitir personalizar nuestros Layout-->
    <TextView
    android:id="@+id/textViewSex"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Sexo"
    android:textSize="25dp"/>

        <!--- Es un elemento que ofrece un desplegable en el que se puede seleccionar
     una de multiples opciones y tambien se visualiza la opcion seleccionada -->
    <Spinner
    android:id="@+id/spinnerSex"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:entries="@array/Sex"
    android:prompt="@string/Prompt"/>

        <!--- Se crea un textView que se iniciara en 0 -->
        <!--- Los TextView son propiedades de texto que nos van a permitir personalizar nuestros Layout-->
    <TextView
    android:id="@+id/textViewFecha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Fecha"
    android:textSize="25dp"/>

        <!--- El datePicker permite elegir y obtener la fecha con suma facilidad gracias a la interfaz grafica de Android -->
    <DatePicker
    android:id="@+id/datePickerFecha"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1.91"/>

        <!--- Se crea un textView que se iniciara en 0 -->
        <!--- Los TextView son propiedades de texto que nos van a permitir personalizar nuestros Layout-->
        <TextView
    android:id="@+id/textViewEstado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Estado"
    android:textSize="25dp"/>

    <Spinner
    android:id="@+id/spinnerEstado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:drawSelectorOnTop="true"
    android:prompt="@string/Prompt"/>

        <!--- Es un elemento que ofrece un desplegable en el que se puede seleccionar
    una de multiples opciones y tambien se visualiza la opcion seleccionada -->
</LinearLayout> <!--- Se cierra la etiqueta del Linearlayout creado -->

    <!---  Se crea el botonConsultar -->
    <Button
    android:id="@+id/buttonConsultar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_x="212dp"
    android:layout_y="339dp"
    android:text="@string/P3ButtonConsultar"/>

    </AbsoluteLayout> <!--- Se cierra la etiqueta del Absolutelayout creado -->
